version/0.19/_sources/api/solver/_autosummary/settings/pack_builder.rst.txt
:orphan:

.. _pack_builder:

pack_builder
============

.. autoclass:: ansys.fluent.core.solver.settings_241.pack_builder.pack_builder
    :show-inheritance:

.. rubric:: Attributes

==============================================   =====================================

Attribute                                                                      Summary

==============================================   =====================================
:ref:`module_case_file <module_case_file>`                   'module_case_file' child.

:ref:`cold_plate_file <cold_plate_file>`                      'cold_plate_file' child.

:ref:`read_location_file <read_location_file>`             'read_location_file' child.

:ref:`nci_face_list <nci_face_list>`                 Set non-conformal interface list.

==============================================   =====================================

.. rubric:: Methods

======================================================   =====================================

Method                                                                                 Summary

======================================================   =====================================
:ref:`construct_battery_pack <construct_battery_pack>`                 Construct battery pack.

:ref:`nci_pair_creation <nci_pair_creation>`                 Non-conformal Interface Matching.

======================================================   =====================================

.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`battery <battery>`       'battery' child.

========================   ====================

