version/0.23/_sources/api/solver/_autosummary/settings/pack_builder.rst.txt
:orphan:

.. _pack_builder:

pack_builder
============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.pack_builder.pack_builder
    :show-inheritance:

.. rubric:: Attributes

================================================================   =======================================================================

Attribute                                                                                                                          Summary

================================================================   =======================================================================
:ref:`module_case_file <module_case_file>`                                   Module case name with its full path used in the pack builder.

:ref:`cold_plate_file <cold_plate_file>`                                                          Cold-plate file name with its full path.

:ref:`nci_face_list <nci_face_list>`                                                 Set non-conformal interface list om the pack builder.

:ref:`translation_rotation_matrix <translation_rotation_matrix>`       Data class to hold translation-rotation-matrix in the pack builder.

================================================================   =======================================================================

.. rubric:: Methods

======================================================   ==============================================================

Method                                                                                                          Summary

======================================================   ==============================================================
:ref:`read_location_file <read_location_file>`                Command object to read location file in the pack builder.

:ref:`write_location_file <write_location_file>`             Command object to write location file in the pack builder.

:ref:`construct_battery_pack <construct_battery_pack>`                                          Construct battery pack.

:ref:`nci_pair_creation <nci_pair_creation>`                      Non-conformal Interface Matching in the pack builder.

======================================================   ==============================================================

.. rubric:: Included in:

============================   ==============================

Parent                                                Summary

============================   ==============================
:ref:`tool_kits <tool_kits>`       Battery model's tool kits.

============================   ==============================

